[package]
name = "linpow"
version = "0.1.0"
edition = "2021"
description = "Real-time power consumption monitor for Linux"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
unicode-width = "0.2"
